--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <!-- Social Media Meta Tags -->
     <meta property="og:title" content="layers2.com - Track bitcoin layers 2 projects" />
     <meta property="og:description" content="Track bitcoin layers 2 projects - Lightning, Spark, Liquid, Citrea, Stacks, Rootstock, Runes, Ordinals and more." />
-    <meta property="og:image" content="./social-layers2.png" />
+    <meta property="og:image" content="/social-layers2.png" />
     <meta property="og:url" content="https://layers2.com" />
     <meta property="og:type" content="website" />
     
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="layers2.com - Track bitcoin layers 2 projects" />
     <meta name="twitter:description" content="Track bitcoin layers 2 projects - Lightning, Spark, Liquid, Citrea, Stacks, Rootstock, Runes, Ordinals and more." />
-    <meta name="twitter:image" content="./social-layers2.png" />
+    <meta name="twitter:image" content="/social-layers2.png" />
     
-    <link rel="icon" type="image/x-icon" href="./favicon.ico?v=2" />
-    <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?v=2" />
-    <link rel="apple-touch-icon" href="./favicon.ico?v=2" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=2" />
+    <link rel="apple-touch-icon" href="/favicon.ico?v=2" />
   </head>
   <body>
     <div id="app"></div>
