--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <!-- GitHub Pages SPA redirect -->
+    <script src="/spa-redirect.js"></script>
   </body>
 </html>
