2nd urls changes

--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Redirecting...</title>
     <script>
-      // GitHub Pages SPA redirect
+      // GitHub Pages SPA redirect for custom domain (layers2.com)
       // This file is served when a 404 occurs
       // It redirects to index.html with the path as a query parameter
       const pathSegmentsToKeep = 0;
